--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@ layout: home
 # Index page
 ---
 
-<div class="announcement">
+<div class="announcement" style="background-color: #e6e6e6; padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
     <h2>Announcement</h2>
     <p>Our first joint workshop is on 1/17-18 on UTHealth campus.</p>
     <a href="https://aim-ahead-dicb.github.io/dicb_uttu/posts/Janurary-Workshop/">details</a>
 
     <details>
-        <summary style="background-color: #000000; font-weight: bold; color: #FFFFFF; font-size: 2em;">Zoom Meeting Link
+        <summary style="background-color: #333333; font-weight: bold; color: #FFFFFF; font-size: 2em;">Zoom Meeting Link
         </summary>
 
         <div style="margin-left: 20px;">
