--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 # Index page
 ---
 
-<div class="announcement" style="background-color: #e6e6e6; padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
+<div class="announcement" style="background-color: #e6e6e6; border: 1px solid #ccc; border-radius: 5px;">
     <h2 style="font-weight: bold; color: #6699CC;">Announcement</h2>
     <p>Our first joint workshop is on 1/17-18 on UTHealth campus. For more details, click <a href="https://aim-ahead-dicb.github.io/dicb_uttu/posts/Janurary-Workshop/">here</a>. For more AIM-AHEAD news, see <a href="https://www.aim-ahead.net/news/">https://www.aim-ahead.net/news/</a></p>
     <details>
