--- a/index.html
+++ b/index.html
@@ -5,26 +5,31 @@ layout: home
 
 <div class="announcement" style="background-color: #e6e6e6; padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
     <h2 style="font-weight: bold; color: #6699CC; margin-top: 0;">Announcement</h2>
-    <p style="font-weight: bold; color: red; font-size: 1.5em;">Notice: This meeting is postponed due to extreme weather conditions. New dates to be announced.</p>
-    <p>Our first joint workshop is on 1/17-18 on UTHealth campus. For more details, click <a href="https://aim-ahead-dicb.github.io/dicb_uttu/posts/Janurary-Workshop/">here</a>. For more AIM-AHEAD news, see <a href="https://www.aim-ahead.net/news/">https://www.aim-ahead.net/news/</a></p>
+    <p style="font-weight: bold; color: red; font-size: 1.5em;">Notice: This meeting is postponed due to extreme weather
+        conditions. New dates to be announced.</p>
+    <p>Our first joint workshop is on 1/17-18 on UTHealth campus. For more details, click <a
+            href="https://aim-ahead-dicb.github.io/dicb_uttu/posts/Janurary-Workshop/">here</a>. For more AIM-AHEAD
+        news, see <a href="https://www.aim-ahead.net/news/">https://www.aim-ahead.net/news/</a></p>
     <details>
-        <summary style="background-color: #6699CC; font-weight: bold; color: #FFFFFF; font-size: 1.5em;">Click Zoom Meeting Link
+        <summary style="background-color: #6699CC; font-weight: bold; color: #FFFFFF; font-size: 1.5em;">Click Zoom
+            Meeting Link
         </summary>
 
         <div style="margin-left: 20px;">
 
+
             <strong>Topic:</strong> AIM-AHEAD DICB UTTU<br>
-            <strong>Time:</strong> Jan 17, 2024 08:30 AM Central Time (US and Canada)<br>
-            &emsp;&emsp;&emsp;&emsp;Every day, until Jan 18, 2024, 2 occurrence(s)<br>
-            &emsp;&emsp;&emsp;&emsp;Jan 17, 2024 08:30 AM<br>
-            &emsp;&emsp;&emsp;&emsp;Jan 18, 2024 08:30 AM<br>
+            <strong>Time:</strong> Jan 29, 2024 08:30 AM Central Time (US and Canada)<br>
+            &emsp;&emsp;&emsp;&emsp;Every day, until Jan 30, 2024, 2 occurrence(s)<br>
+            &emsp;&emsp;&emsp;&emsp;Jan 29, 2024 08:30 AM<br>
+            &emsp;&emsp;&emsp;&emsp;Jan 30, 2024 08:30 AM<br>
 
             <strong>Join Zoom Meeting</strong><br>
             <a
-                href="https://uthealth.zoom.us/j/98256802192?pwd=TjRlWFVYNXpMZXRXM2dhYjdkWXVHQT09">https://uthealth.zoom.us/j/98256802192?pwd=TjRlWFVYNXpMZXRXM2dhYjdkWXVHQT09</a><br>
+                href="https://uthealth.zoom.us/j/99411035097?pwd=NG9JY2VsVllpWCtUN1ROUFN4N2h2UT09">https://uthealth.zoom.us/j/99411035097?pwd=NG9JY2VsVllpWCtUN1ROUFN4N2h2UT09</a><br>
 
-            <strong>Meeting ID:</strong> 982 5680 2192<br>
-            <strong>Passcode:</strong> 094498<br>
+            <strong>Meeting ID:</strong> 994 1103 5097<br>
+            <strong>Passcode:</strong> 489106<br>
 
             <hr>
 
@@ -58,12 +63,12 @@ layout: home
             <strong>Passcode:</strong> 094498<br>
 
             <strong>Find your local number:</strong> <a
-                href="https://uthealth.zoom.us/u/adwaPmynsO">https://uthealth.zoom.us/u/adwaPmynsO</a><br>
+                href="https://uthealth.zoom.us/u/acdIa58UcQ">https://uthealth.zoom.us/u/acdIa58UcQ</a><br>
 
             <hr>
 
             <strong>Join by SIP</strong><br>
-            • 98256802192@zoomcrc.com<br>
+            • 99411035097@zoomcrc.com<br>
 
             <hr>
 
@@ -83,8 +88,8 @@ layout: home
             • 207.226.132.110 (Japan Tokyo)<br>
             • 149.137.24.110 (Japan Osaka)<br>
 
-            <strong>Meeting ID:</strong> 982 5680 2192<br>
-            <strong>Passcode:</strong> 094498<br>
+            <strong>Meeting ID:</strong> 994 1103 5097<br>
+            <strong>Passcode:</strong> 489106<br>
 
         </div>
     </details>
