--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ layout: home
 <div class="announcement" style="background-color: #e6e6e6; padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
     <h2 style="font-weight: bold; color: #6699CC; margin-top: 0;">Announcement</h2>
     <p style="font-weight: bold; color: red; font-size: 1.5em;">Notice: This meeting is postponed due to extreme weather
-        conditions. New dates to be announced.</p>
-    <p>Our first joint workshop is on 1/17-18 on UTHealth campus. For more details, click <a
+        conditions. New dates will be 1/29-30.</p>
+    <p>Our first joint workshop is on 1/29-30 on UTHealth campus. For more details, click <a
             href="https://aim-ahead-dicb.github.io/dicb_uttu/posts/Janurary-Workshop/">here</a>. For more AIM-AHEAD
         news, see <a href="https://www.aim-ahead.net/news/">https://www.aim-ahead.net/news/</a></p>
     <details>
