--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 # Index page
 ---
 
-
+<!-- 
 <div class="announcement" style="background-color: #e6e6e6; padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
     <h2 style="font-weight: bold; color: #6699CC; margin-top: 0;">Announcement</h2>
     <p style="font-weight: bold; color: red; font-size: 1.5em;">Notice: This meeting is postponed due to extreme weather
@@ -95,7 +95,7 @@ layout: home
         </div>
     </details>
 
-</div>
+</div> -->
 
 
 
