--- a/index.html
+++ b/index.html
@@ -112,3 +112,10 @@ with informaticians, is also a pressing concern.
 Our project aims to develop a concerted effort between two partner institutes (Tuskegee University and UTHealth at
 Houston) to strengthen data governance and facilitate the adoption of AI/ML technologies, while ensuring the ethical
 treatment and representation of minority populations.
+
+<p style="font-weight: bold; color: red; font-size: 1em;">
+  This project has been formally approved by the Ethical Committees of both UTHealth and Tuskegee University. 
+  Take the survey to join us in this pioneering effort to enhance data governance and ensure the responsible use of AI/ML technologies in healthcare.
+  Take the survey here.
+  <a href="https://uthtmc.az1.qualtrics.com/jfe/form/SV_0ixRkI4X4LQxOE6">Take the survey here</a>.
+</p>
