--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: "Promoting Health Equity through Ethical AI/ML"
 
 <div class="home">
   <h1>Promoting Health Equity through Ethical AI/ML: The Role of AI/ML in Healthcare Data Governance and Access</h1>
-  <img src="/assets/img/favicons/TU_UT_logos.jpg>
+  <img src="/assets/img/favicons/TU_UT_logos.jpg" alt="TU and UT logos">
 
   <p>The healthcare sector is currently facing a significant issue concerning data governance, particularly in relation to
   health equity and Ethical AI/ML issues impacting minority populations. This challenge is exacerbated by the lack of
