--- a/index.html
+++ b/index.html
@@ -24,4 +24,32 @@ title: "Promoting Health Equity through Ethical AI/ML"
     Take the survey to join us in this pioneering effort to enhance data governance and ensure the responsible use of AI/ML technologies in healthcare.
     <a href="https://uthtmc.az1.qualtrics.com/jfe/form/SV_0ixRkI4X4LQxOE6">Take the survey here</a>.
   </p>
+
+  <div class="content-wrapper">
+    <div class="main-content">
+      <!-- Your existing content can go here -->
+    </div>
+    <div class="sidebar">
+      <!-- Upcoming Events Box -->
+      <div class="events-box">
+          <h2>Upcoming Events</h2>
+          <ul>
+              <li>
+                  <span class="event-date">July 20, 2024</span>
+                  <span class="event-name">Summer Gala</span>
+              </li>
+              <li>
+                  <span class="event-date">August 15, 2024</span>
+                  <span class="event-name">Tech Conference</span>
+              </li>
+              <li>
+                  <span class="event-date">September 10, 2024</span>
+                  <span class="event-name">Music Festival</span>
+              </li>
+              <!-- Add more events as needed -->
+          </ul>
+      </div>
+    </div>
+  </div>
 </div>
+
