--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
----
-layout: home
-title: "Promoting Health Equity through Ethical AI/ML"
-# Index page
----
-
 <div class="home">
   <h1>Promoting Health Equity through Ethical AI/ML: The Role of AI/ML in Healthcare Data Governance and Access</h1>
 
@@ -24,12 +18,28 @@ title: "Promoting Health Equity through Ethical AI/ML"
     Take the survey to join us in this pioneering effort to enhance data governance and ensure the responsible use of AI/ML technologies in healthcare.
     <a href="https://uthtmc.az1.qualtrics.com/jfe/form/SV_0ixRkI4X4LQxOE6">Take the survey here</a>.
   </p>
-
+  
   <div class="content-wrapper">
     <div class="main-content">
       <!-- Your existing content can go here -->
     </div>
     <div class="sidebar">
+      <!-- Trending Tags Section -->
+      <div class="trending-tags">
+        <h2>Trending Tags</h2>
+        <div class="tags">
+          <span class="tag">workshop</span>
+          <span class="tag">tools</span>
+          <span class="tag">community</span>
+          <span class="tag">document</span>
+          <span class="tag">education</span>
+          <span class="tag">FHIR</span>
+          <span class="tag">OMOP</span>
+          <span class="tag">paper</span>
+          <span class="tag">photo</span>
+        </div>
+      </div>
+
       <!-- Upcoming Events Box -->
       <div class="events-box">
           <h2>Upcoming Events</h2>
@@ -52,4 +62,3 @@ title: "Promoting Health Equity through Ethical AI/ML"
     </div>
   </div>
 </div>
-
