--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+---
+layout: home
+title: "Promoting Health Equity through Ethical AI/ML"
+# Index page
+---
+
 <div class="home">
   <h1>Promoting Health Equity through Ethical AI/ML: The Role of AI/ML in Healthcare Data Governance and Access</h1>
 
@@ -24,40 +30,24 @@
       <!-- Your existing content can go here -->
     </div>
     <div class="sidebar">
-      <!-- Trending Tags Section -->
-      <div class="trending-tags">
-        <h2>Trending Tags</h2>
-        <div class="tags">
-          <span class="tag">workshop</span>
-          <span class="tag">tools</span>
-          <span class="tag">community</span>
-          <span class="tag">document</span>
-          <span class="tag">education</span>
-          <span class="tag">FHIR</span>
-          <span class="tag">OMOP</span>
-          <span class="tag">paper</span>
-          <span class="tag">photo</span>
-        </div>
-      </div>
-
       <!-- Upcoming Events Box -->
       <div class="events-box">
-        <h2>Upcoming Events</h2>
-        <ul>
-          <li>
-            <span class="event-date">July 20, 2024</span>
-            <span class="event-name">Summer Gala</span>
-          </li>
-          <li>
-            <span class="event-date">August 15, 2024</span>
-            <span class="event-name">Tech Conference</span>
-          </li>
-          <li>
-            <span class="event-date">September 10, 2024</span>
-            <span class="event-name">Music Festival</span>
-          </li>
-          <!-- Add more events as needed -->
-        </ul>
+          <h2>Upcoming Events</h2>
+          <ul>
+              <li>
+                  <span class="event-date">July 20, 2024</span>
+                  <span class="event-name">Summer Gala</span>
+              </li>
+              <li>
+                  <span class="event-date">August 15, 2024</span>
+                  <span class="event-name">Tech Conference</span>
+              </li>
+              <li>
+                  <span class="event-date">September 10, 2024</span>
+                  <span class="event-name">Music Festival</span>
+              </li>
+              <!-- Add more events as needed -->
+          </ul>
       </div>
     </div>
   </div>
