--- a/index.html
+++ b/index.html
@@ -25,30 +25,20 @@ title: "Promoting Health Equity through Ethical AI/ML"
     <a href="https://uthtmc.az1.qualtrics.com/jfe/form/SV_0ixRkI4X4LQxOE6">Take the survey here</a>.
   </p>
 
-  <div class="content-wrapper">
-    <div class="main-content">
-      <!-- Your existing content can go here -->
-    </div>
-    <div class="sidebar">
-      <!-- Upcoming Events Box -->
-      <div class="events-box">
-          <h2>Upcoming Events</h2>
-          <ul>
-              <li>
-                  <span class="event-date">July 20, 2024</span>
-                  <span class="event-name">Summer Gala</span>
-              </li>
-              <li>
-                  <span class="event-date">August 15, 2024</span>
-                  <span class="event-name">Tech Conference</span>
-              </li>
-              <li>
-                  <span class="event-date">September 10, 2024</span>
-                  <span class="event-name">Music Festival</span>
-              </li>
-              <!-- Add more events as needed -->
-          </ul>
-      </div>
-    </div>
+  <!-- Upcoming Events Box -->
+  <div class="events-box">
+      <h2>Upcoming Events</h2>
+      <ul>
+          <li>
+              <span class="event-date">July 20-21, 2024</span>
+              <span class="event-name">[Workshop at Hilton Garden Inn, Orange Beach, Alabama](https://aim-ahead-dicb.github.io/dicb_uttu/posts/Workshop-Alabama/)</span>
+          </li>
+          <li>
+              <span class="event-date">Fall 2024, 2024</span>
+              <span class="event-name">[Accelerated 4+1 Program at UTHealth for Tuskegee Undergraduates](https://aim-ahead-dicb.github.io/dicb_uttu/posts/Accelerated-MS-program/)</span>
+          </li>
+          
+          <!-- Add more events as needed -->
+      </ul>
   </div>
 </div>
