--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ title: "Promoting Health Equity through Ethical AI/ML"
       <ul>
           <li>
               <span class="event-date">July 20-21, 2024</span>
-              <span class="event-name">[Workshop at Hilton Garden Inn, Orange Beach, Alabama](https://aim-ahead-dicb.github.io/dicb_uttu/posts/Workshop-Alabama/)</span>
+              <a href="https://aim-ahead-dicb.github.io/dicb_uttu/posts/Workshop-Alabama/" class="event-name">Workshop at Hilton Garden Inn, Orange Beach, Alabama</a>
           </li>
           <li>
               <span class="event-date">Fall 2024, 2024</span>
-              <span class="event-name">[Accelerated 4+1 Program at UTHealth for Tuskegee Undergraduates](https://aim-ahead-dicb.github.io/dicb_uttu/posts/Accelerated-MS-program/)</span>
+              <a href="https://aim-ahead-dicb.github.io/dicb_uttu/posts/Accelerated-MS-program/" class="event-name">Accelerated 4+1 Program at UTHealth for Tuskegee Undergraduates</a>
           </li>
           
           <!-- Add more events as needed -->
