--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: "Promoting Health Equity through Ethical AI/ML"
     <a href="https://uthtmc.az1.qualtrics.com/jfe/form/SV_0ixRkI4X4LQxOE6">Take the survey here</a>.
   </p>
 
-  <!-- Upcoming Events Box -->
+  <!-- Upcoming Events Box 
   <div class="events-box">
       <h2>Upcoming Events</h2>
       <ul>
@@ -41,4 +41,4 @@ title: "Promoting Health Equity through Ethical AI/ML"
           <!-- Add more events as needed -->
       </ul>
   </div>
-</div>
+</div>-->
