--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@ title: "Promoting Health Equity through Ethical AI/ML"
   Houston) to strengthen data governance and facilitate the adoption of AI/ML technologies, while ensuring the ethical
   treatment and representation of minority populations.</p>
 
+  <!--
   <p style="font-weight: bold; color: green; font-size: 1em;">
     This project has been formally approved by the Ethical Committees of both UTHealth and Tuskegee University. 
     Take the survey to join us in this pioneering effort to enhance data governance and ensure the responsible use of AI/ML technologies in healthcare.
     <a href="https://uthtmc.az1.qualtrics.com/jfe/form/SV_0ixRkI4X4LQxOE6">Take the survey here</a>.
   </p>
-
-  <!-- Upcoming Events Box 
+  -->
+<!--
+  <!-- Upcoming Events Box -->
   <div class="events-box">
       <h2>Upcoming Events</h2>
       <ul>
@@ -42,3 +44,4 @@ title: "Promoting Health Equity through Ethical AI/ML"
       </ul>
   </div>
 </div>-->
+-->
