--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ title: "Promoting Health Equity through Ethical AI/ML"
     <a href="https://uthtmc.az1.qualtrics.com/jfe/form/SV_0ixRkI4X4LQxOE6">Take the survey here</a>.
   </p>
   -->
-<!--
-  <!-- Upcoming Events Box -->
+
+  <!-- Upcoming Events Box 
   <div class="events-box">
       <h2>Upcoming Events</h2>
       <ul>
@@ -44,4 +44,5 @@ title: "Promoting Health Equity through Ethical AI/ML"
       </ul>
   </div>
 </div>-->
+-->
 -->
