--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ title: "Promoting Health Equity through Ethical AI/ML"
   </p>
   -->
 
-  <!-- Upcoming Events Box 
-  <div class="events-box">
+  <!-- Upcoming Events Box -->
+  <!-- <div class="events-box">
       <h2>Upcoming Events</h2>
       <ul>
           <li>
@@ -39,10 +39,8 @@ title: "Promoting Health Equity through Ethical AI/ML"
               <span class="event-date">Fall 2024, 2024</span>
               <a href="https://aim-ahead-dicb.github.io/dicb_uttu/posts/Accelerated-MS-program/" class="event-name">Accelerated 4+1 Program at UTHealth for Tuskegee Undergraduates</a>
           </li>
-          
+        
           <!-- Add more events as needed -->
       </ul>
-  </div>
-</div>-->
--->
--->
+  </div> -->
+ 
